# colab91-ap-agent

./: .dockerignore  .gitignore  .vercelignore  API_DOCUMENTATION.md  BACKEND_DEPLOY_RENDER.md  DEPLOYMENT_COMPLETE.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_SETUP_CHECKLIST.md  deploy-vercel.sh  init_database.py  normalized_column_overrides.json  pyproject.toml  render.yaml  requirements.txt  run_batch_file.py  run_tests.sh  setup.sh  start_hitl_api.sh  start_ui 2.sh  test_api.py  test_api_endpoints.py  validate_setup.sh  vercel.json
api/: __init__.py  dependencies.py  exceptions.py  index.py  main.py  requirements.txt
api/models/: requests.py  responses.py  validation_helpers.py
api/routers/: classification.py  datasets.py  feedback.py  supplier_rules.py  supplier_rules_helpers.py  transactions.py
api/services/: __init__.py  dataset_service.py
benchmarks/: analyze_benchmark.py  create_random_benchmark.py  diagnose_rag.py  random_bench_1_analysis.md  run_benchmark.py
core/: config.py  pipeline.py
data/: classifications.db
docs/: FEEDBACK_SYSTEM_IMPLEMENTATION.md  MLFLOW_TRACING.md  architecture.md  hitl_implementation.md  invoice_level_processing.md  post_classification_hitl_prd.md
frontend/: index.html  package-lock 2.json  package-lock.json  package.json
taxonomies/: FOX_20230816_161348.yaml  Innova_Care_Health_Jun_23.yaml  LifePoint_20231128_210029.yaml  S&P_Global_20231215_153855.yaml
tests/: __init__.py  test_canonicalization.py  test_classification.py  test_pipeline.py  test_research.py  test_taxonomy_converter.py
(+117 files in other folders)
