[tool.poetry]
name = "colab91-ap-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
dspy-ai = "^3.0.4"
openai = "^2.8.0"
pydantic = "^2.12.4"
python-dotenv = "^1.2.1"
mlflow = "^3.6.0"
pandas = "^2.3.3"
pyyaml = "^6.0.3"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.0"
sentence-transformers = "^2.3.0"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
